--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,7 +1,7 @@
 body{background: rgb(142,140,140);
     background: linear-gradient(90deg, rgba(142,140,140,1) 0%, rgba(169,169,170,1) 100%, rgba(0,212,255,1) 100%);
-    height: auto;
-    width: auto;
+    /* height: auto;
+    width: auto; */
 }
 
 .calculator{
@@ -10,7 +10,6 @@ body{background: rgb(142,140,140);
     align-items: center;
     padding: 25px;
     width: 300px;
-    max-height: fit-content;
     background-color: #4E4F50;
     border-radius: 2%;
     box-shadow: 0px 0px 5px 3px rgba(80,73,73,0.75);
