--- a/stylesheet.css
+++ b/stylesheet.css
@@ -57,9 +57,6 @@ button:active{
     -webkit-box-shadow: 0px 1px 5px 2px rgba(0,0,0,0.62) inset;
     -moz-box-shadow: 0px 1px 5px 2px rgba(0,0,0,0.62) inset;
 }
-.zero-btn{
-    width: 55%;
-}
 .operator, .percentage{
     color: orange;
 }
@@ -70,8 +67,10 @@ button:hover{
     background-color: darkorange;
     color: white;
 }
-.all-clear{
+zero-btn, .all-clear{
     width: 55%;
+}
+.all-clear{
     background-color: rgb(172, 6, 6);
 }
 .all-clear:hover{
@@ -87,5 +86,9 @@ button:hover{
 @media all and (max-width: 670px){
     .calculator{
         width: 250px;
+    }
+    
+    .zero-btn, .all-clear{
+        width: 55%;
     }
 }
